[package]
name = "devchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
