[package]
name = "devchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
ed25519-dalek = "1.0.1"
rand = { version = "0.7", features = ["std"] }
clap = { version = "4.0", features = ["derive"] }